added the rpm gauge with animation

--- a/app/styles.css
+++ b/app/styles.css
@@ -48,7 +48,7 @@ body {
       padding: 0;
       margin: 0;
       color: white;
-      font-size: 50px;
+      font-size: 75px;
       text-shadow: 0 0 10px white; }
       #speedo #speedo-content h1.red {
         color: red;
@@ -57,7 +57,8 @@ body {
         content: 'mph';
         font-size: .3em;
         position: absolute;
-        padding-top: 35px; }
+        padding-top: 50px;
+        padding-left: 5px; }
   #speedo #rpm {
     position: absolute;
     height: 380px;
@@ -76,4 +77,14 @@ svg {
     fill: transparent;
     stroke: #333;
     stroke-width: 20;
-    stroke-dasharray: 0; }
+    stroke-dasharray: 1200;
+    stroke-dashoffset: 1180;
+    -webkit-transform-origin: center;
+    -ms-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    transform: rotate(135deg);
+    transition: all .1s ease-in; }
+    svg .outer.red {
+      stroke: red; }
